@@ -1,3 +1,7 @@
+2018-12-14  Juan J. merelo  <jmerelo@penny>
+
+	* 011-external.t: Adds teste mainly for integration with GitHub, and avoiding prepending package names to defined classes.
+	
 2018-12-11  Juan J. merelo  <jmerelo@penny>
 
 	* META6.json: Bumps up to 0.4.1 after fixing the problem of URIzing titles and subtitles. 
